# redapp_front

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  asset-manifest.json  index.html  package-lock.json  package.json
.github/workflows/: deploy.yml
api/: CharacterFuncs.jsx
app/: globals.css  layout.tsx  page.tsx
app/[character]/: page.jsx
backend/: index.js  package-lock.json  package.json  run.bat
backend/models/: characterSchema.js  schemas.js
backend/routes/: router.js
redapp_api/: Cargo.toml
redapp_api/src/: error.rs  main.rs  mongo_db.rs
redapp_front/: Cargo.toml  Trunk.toml  index.scss
redapp_front/src/: app.rs  cookies.rs  main.rs  router.rs
redapp_front/src/components/: char.rs  mod.rs  reqwest.rs
redapp_front/src/components/pages/: admin.rs
src/: App.css  App.tsx  index.css  index.jsx
src/pages/: 404.jsx  Char.jsx  Character.jsx  Character.tsx  CharacterHub.jsx  Home.tsx  NewCharacter.jsx  SpellGenerator.tsx
static/css/: main.f6b41d97.css  main.f6b41d97.css.map
static/js/: main.152c3d4f.js  main.152c3d4f.js.map  main.add1374e.js  main.add1374e.js.LICENSE.txt  main.add1374e.js.map
tests/: Cargo.toml
tests/tests/: dev.rs
