[package]
name = "redapp_api"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
axum = "0.7.5"
serde_json = "1.0.117"
askama = { version = "0.12.1", features = ["with-axum", "serde", "serde-json"] }

[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-runtime"]
