[package]
name = "redapp"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/Zorth/redapp"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4.38"
js-sys = "0.3.69"
reqwest = "0.12.4"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
urlencoding = "2.1.3"
wasm-bindgen = "0.2.92"
wasm-cookies = { version = "0.2.1"}
web-sys = "0.3.69"
yew = { version="0.20", features=["csr"] }
yew-router = "0.17.0"
